# game_engine

./: CMakeLists.txt
src/: Camera.cpp  Camera.hpp  ShaderHelper.cpp  ShaderHelper.hpp  TextureLoader.cpp  TextureLoader.hpp  Triangle.cpp  Triangle.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  main.cpp  shader_helper.cpp  shader_helper.hpp
src/resource/shaders/: object_fragment.glsl  object_vertex.glsl
